--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.7",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.14.0",
     "@reduxjs/toolkit": "^2.2.8",
     "dayjs": "^1.11.13",
@@ -22,6 +23,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
