--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
