--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.24.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
