--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# jest
+/__tests__ 
+jest.config.ts
+jest.setup.ts
+jest.setup.js
+
+#swc
+.swc
+
